Updates from ShareLaTeX

--- a/dissertation.sty
+++ b/dissertation.sty
@@ -202,6 +202,7 @@
 \renewcommand{\cftchapleader}{\cftdotfill{\cftnodots}} % for chapters
 \renewcommand{\cftsecleader}{\cftdotfill{\cftnodots}} % for sections
 \renewcommand{\cftsubsecleader}{\cftdotfill{\cftnodots}} % for subsections
+\renewcommand{\cftsubsubsecleader}{\cftdotfill{\cftnodots}} % for subsubsections
 \renewcommand{\cftfigleader}{\cftdotfill{\cftnodots}} % for figures
 \renewcommand{\cfttableader}{\cftdotfill{\cftnodots}} % for tables
 
