--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -10,7 +10,7 @@
 \newacronym{cmd}{CMD}{Chave Móvel Digital}
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
 \newacronym{auth.gov}{Auth.Gov}{Autenticação.Gov}
-
+\newacronym{passport}{Passport}{Passport.js}
 %%baseado com jwt
 \newacronym{jwt}{JWT}{JSON Web Token}
 \newacronym{hmac}{HMAC}{Hash-based Message Authentication Code}
@@ -19,3 +19,4 @@
 \newacronym{ssl}{SSL}{Secure Sockets Layer}
 \newacronym{tls}{TLS}{Transport Layer Security}
 \newacronym{md5}{md5}{Message-Digest algorithm 5}
+\newacronym{api}{API}{Application programming interface}
