--- a/sections/1_introducao.tex
+++ b/sections/1_introducao.tex
@@ -20,4 +20,33 @@ Através de um projeto colaborativo que envolveu grande parte dos organismos da 
 
 Este trabalho enquadra-se no Projeto CLAV, nas suas terceiras e quarta fase de desenvolvimento, na implementação de uma aplicação Web para a gestão e manutenção da plataforma CLAV. 
 
+%\cleardoublepage
+%\section{Motivação}
+%escrever aqui cenas da autenticacao e seguranca
+
+\cleardoublepage
 \section{Objetivos}
+%ver o que ja foi enviado
+
+A realização desta dissertação tem como objetivo os seguintes pontos:
+
+\begin{itemize}
+    \item Estudo e interpretação dos serviços da plataforma Autenticação.Gov e respetivos requisitos.
+    \item Integração e desenvolvimento de métodos apropriados de registo e login de utilizadores, bem como a gestão dos mesmos, utilizando a ferramenta Autenticação.Gov.
+    \item Avaliação dos métodos gerados, garantindo assim uma correta implementação dos mesmos na plataforma M51-CLAV.
+\end{itemize}
+
+\cleardoublepage
+\section{Metodologia}
+%ver o que ja foi enviado
+
+A metodologia para a realização desta dissertação segue os seguintes passos:
+
+\begin{itemize}
+    \item Leitura e análise inicial do projeto.
+    \item Estudo da ferramenta Autenticação.Gov e requisitos por ela
+impostos.
+    \item Desenvolvimento de um protótipo com funcionalidades
+semelhantes ou idênticas à esperada.
+    \item Implementação na plataforma M51-CLAV.
+\end{itemize}
