--- a/dissertation.tex
+++ b/dissertation.tex
@@ -13,7 +13,8 @@
 \usepackage{dissertation}
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
-
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 % ACRONYMS -----------------------------------------------------
 
@@ -126,7 +127,7 @@
     \input{sections/2_sota.tex}
 
 	% CHAPTER - Problem and Challenges ---------------
-    \input{sections/3_desafios.tex}
+    %\input{sections/3_desafios.tex}
 	
 	% CHAPTER - Contribution -------------------------
     %\input{sections/4_contribuicao.tex}
@@ -146,7 +147,6 @@
 
 	% Index of terms (needs  makeindex) -------------
 	%\printindex
-	
 	
 	% APPENDIX --------------------------------------
 	\umappendix{Appendix}
