Updates from ShareLaTeX

--- a/sections/1_introducao.tex
+++ b/sections/1_introducao.tex
@@ -36,7 +36,7 @@ A realização desta dissertação tem como objetivo os seguintes pontos:
     \item Avaliação dos métodos gerados, garantindo assim uma correta implementação dos mesmos na plataforma M51-CLAV.
 \end{itemize}
 
-\cleardoublepage
+%\cleardoublepage
 \section{Metodologia}
 %ver o que ja foi enviado
 
