Updates from ShareLaTeX

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -13,6 +13,9 @@
 \usepackage{dissertation}
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{amsmath}
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
