Updates from ShareLaTeX

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -18,6 +18,7 @@
 \usepackage[noend]{algpseudocode}
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
+\usepackage{pgfplots}
 
 % ACRONYMS -----------------------------------------------------
 
