--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -10,16 +10,22 @@
 \newacronym{cmd}{CMD}{Chave Móvel Digital}
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
 \newacronym{auth.gov}{Auth.Gov}{Autenticação.Gov}
+
 %%baseado com jwt
 \newacronym{jwt}{JWT}{JSON Web Token}
 \newacronym{hmac}{HMAC}{Hash-based Message Authentication Code}
 \newacronym{rsa}{RSA}{Rivest-Shamir-Adleman}
 \newacronym{sha}{SHA}{Secure Hash Algorithm}
+
+%%bcrypt
 \newacronym{owasp}{OWASP}{Open Web Application Security Project}
 
+%%random
 \newacronym{ssl}{SSL}{Secure Sockets Layer}
 \newacronym{tls}{TLS}{Transport Layer Security}
 \newacronym{md5}{md5}{Message-Digest algorithm 5}
 \newacronym{api}{API}{Application programming interface}
 \newacronym{cpu}{CPU}{Central Processing Unit}
 \newacronym{gpu}{GPU}{Graphics Processing Unit}
+\newacronym{fpga}{FPGA}{Field-programmable gate array}
+\newacronym{usenix}{USENIX}{The Advanced Computing Systems Association}
