Updates from ShareLaTeX

--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -28,4 +28,5 @@
 \newacronym{cpu}{CPU}{Central Processing Unit}
 \newacronym{gpu}{GPU}{Graphics Processing Unit}
 \newacronym{fpga}{FPGA}{Field-programmable gate array}
+\newacronym{asic}{ASIC}{Application-specific integrated circuit}
 \newacronym{usenix}{USENIX}{The Advanced Computing Systems Association}
